# diyPresso-Client

./: .gitignore  CMakeLists.txt  GUI-plan.md  README.md  WINDOWS_SETUP.md  build-macos-universal.sh  build-macos.sh  build-windows.bat  c_cpp_properties.json  check-virustotal.bat  notarize-macos.sh  scan-virustotal.bat  settings_commissioned.json  setup-keychain.sh  test-arm64-only.sh  test-x64-only.sh  verify-bundles.sh
python-src/diyPresso-cli/: main.py
python-src/diyPresso/firmwareUploader/: __init__.py
python-src/diyPresso/serial/: __init__.py
python-src/diyPresso/util/: __init__.py
src/: DpcColors.h  DpcDevice.h  DpcDownload.cpp  DpcDownload.h  DpcFirmware.cpp  DpcFirmware.h  DpcSerial.cpp  DpcSerial.h  DpcSettings.h  main.cpp
src/cli/: main.cpp
src/core/: DpcColors.cpp  DpcDevice.cpp  DpcDownload.h  DpcFirmware.h  DpcSettings.cpp
src/gui/: Info.plist  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
various-src/: bootloader_reset_test.cpp  test_compare  test_compare.cpp
